--- a/bin/MyEshop.dll.config
+++ b/bin/MyEshop.dll.config
@@ -17,8 +17,20 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	  <add key="MyDomain" value="http://localhost:62986/"/>
   </appSettings>
   <system.web>
+	  <authentication mode="Forms">
+		  <forms name="MyEshop" defaultUrl="/" loginUrl="/Login" timeout="43200">
+			  
+		  </forms>
+	  </authentication>
+	  <roleManager enabled="true" defaultProvider="MyEshopRoleProvider">
+		  <providers>
+			  <clear/>
+			  <add name="MyEshopRoleProvider" type="MyEshop.Utilites.MyEshopRoleProvider"/>
+		  </providers>
+	  </roleManager>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
     <pages>
@@ -80,4 +92,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<location path="UserPanel">
+		<system.web>
+			<authorization>
+				<deny users="?"/>
+			</authorization>
+		</system.web>
+	</location>
 </configuration>
