--- a/Web.config
+++ b/Web.config
@@ -107,4 +107,28 @@
 			</authorization>
 		</system.web>
 	</location>
+	<system.serviceModel>
+		<bindings>
+   <basicHttpBinding>
+    <binding name="PaymentGatewayImplementationServiceBinding">
+     <security mode="Transport" />
+    </binding>
+    <binding name="PaymentGatewayImplementationServiceBinding1" />
+    <binding name="PaymentGatewayImplementationServiceBinding2">
+     <security mode="Transport" />
+    </binding>
+    <binding name="PaymentGatewayImplementationServiceBinding3" />
+   </basicHttpBinding>
+  </bindings>
+		<client>
+   <endpoint address="https://sandbox.zarinpal.com/pg/services/WebGate/service"
+    binding="basicHttpBinding" bindingConfiguration="PaymentGatewayImplementationServiceBinding"
+    contract="MyEshop.PaymentGatewayImplementationServicePortType"
+    name="PaymentGatewayImplementationServicePort" />
+   <endpoint address="https://sandbox.zarinpal.com/pg/services/WebGate/service"
+    binding="basicHttpBinding" bindingConfiguration="PaymentGatewayImplementationServiceBinding2"
+    contract="ZarinPal.PaymentGatewayImplementationServicePortType"
+    name="PaymentGatewayImplementationServicePort1" />
+  </client>
+	</system.serviceModel>
 </configuration>
